bk_ida/gccida/c3/apply_args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1353:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1354:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1358:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1361:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1362:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1363:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1367:10: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
result = apply_args_size_size; 
         ^~~~~~~~~~~~~~~~~~~~
         apply_args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1368:6: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
if ( apply_args_size_size < 0 ) 
     ^~~~~~~~~~~~~~~~~~~~
     apply_args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1371:1: error: use of undeclared identifier 'apply_args_size_size'
apply_args_size_size = v1; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1373:1: error: use of undeclared identifier 'apply_args_size_size'
apply_args_size_size = 2 * v1; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1381:8: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
return apply_args_size_size; 
       ^~~~~~~~~~~~~~~~~~~~
       apply_args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1393:29: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( v9 && ( unsigned int)( mode_class_0[v8] - 5) > 1 ) 
                            ^~~~~~~~~~~~
                            mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1472:7: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
v15 = apply_args_size_size; 
      ^~~~~~~~~~~~~~~~~~~~
      apply_args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1473:6: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
if ( apply_args_size_size % v14 ) 
     ^~~~~~~~~~~~~~~~~~~~
     apply_args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1473:27: error: invalid operands to binary expression ('int (void)' and 'int')
if ( apply_args_size_size % v14 ) 
     ~~~~~~~~~~~~~~~~~~~~ ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1475:13: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
v15 = v14 + apply_args_size_size - 1 - ( v14 + apply_args_size_size - 1) % v14; 
            ^~~~~~~~~~~~~~~~~~~~
            apply_args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1475:48: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
v15 = v14 + apply_args_size_size - 1 - ( v14 + apply_args_size_size - 1) % v14; 
                                               ^~~~~~~~~~~~~~~~~~~~
                                               apply_args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1475:74: error: invalid operands to binary expression ('int (*)(void)' and 'int')
v15 = v14 + apply_args_size_size - 1 - ( v14 + apply_args_size_size - 1) % v14; 
                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/builtins.c:1476:1: error: use of undeclared identifier 'apply_args_size_size'
apply_args_size_size = v15; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_args_size/src/obj/builtins.o] Error 1
